# grpc_hello

./: .gitignore  README.md  WORKSPACE  WORKSPACE.bazel
.github/workflows/: autoyapf.yml  bazelisk.yml  cpplint.yml
grpc_hello/client/: BUILD.bazel  hello_client.cc  hello_client.h  hello_client_main.cc  hello_client_py.py  hello_client_py_main.py  hello_client_test.cc
grpc_hello/protos/: BUILD.bazel  grpc_hello.proto
grpc_hello/server/: BUILD.bazel  hello_server.cc  hello_server.h  hello_server.yaml  hello_server_main.cc  hello_server_py.py  hello_server_py_main.py  hello_server_test.cc
