cc_binary(
    name = "hello_client_main",
    srcs = [
        "hello_client_main.cc",
    ],
    deps = [
        ":hello_client",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_google_glog//:glog",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_library(
    name = "hello_client",
    srcs = [
        "hello_client.cc",
    ],
    hdrs = [
        "hello_client.h",
    ],
    deps = [
        "//grpc_hello/protos:grpc_hello_cc_grpc",
        "@com_github_google_glog//:glog",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_test(
    name = "hello_client_test",
    srcs = [
        "hello_client_test.cc",
    ],
    deps = [
        ":hello_client",
        "//grpc_hello/protos:grpc_hello_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
