load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "grpc_hello_proto",
    srcs = ["grpc_hello.proto"],
)

cc_proto_library(
    name = "grpc_hello_cc_proto",
    deps = [":grpc_hello_proto"],
)

cc_grpc_library(
    name = "grpc_hello_cc_grpc",
    srcs = [":grpc_hello_proto"],
    generate_mocks = True,
    grpc_only = True,
    visibility = [
        "//grpc_hello/client:__subpackages__",
        "//grpc_hello/server:__subpackages__",
    ],
    deps = [":grpc_hello_cc_proto"],
)

py_proto_library(
    name = "grpc_hello_py_proto",
    deps = [":grpc_hello_proto"],
)

py_grpc_library(
    name = "grpc_hello_py_grpc",
    srcs = [":grpc_hello_proto"],
    visibility = [
        "//grpc_hello/client:__subpackages__",
        "//grpc_hello/server:__subpackages__",
    ],
    deps = [":grpc_hello_py_proto"],
)
