cc_binary(
    name = "hello_server_main",
    srcs = [
        "hello_server_main.cc",
    ],
    deps = [
        ":hello_server",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_google_glog//:glog",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_grpc_grpc//:grpc++_reflection",
    ],
)

cc_library(
    name = "hello_server",
    srcs = [
        "hello_server.cc",
    ],
    hdrs = [
        "hello_server.h",
    ],
    deps = [
        "//grpc_hello/protos:grpc_hello_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_test(
    name = "hello_server_test",
    srcs = [
        "hello_server_test.cc",
    ],
    deps = [
        ":hello_server",
        "//grpc_hello/protos:grpc_hello_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
